# rvle

./: .mailmap  AUTHORS  ChangeLog  DESCRIPTION  Makefile.am  NAMESPACE  NEWS  README.md  README.rst  appveyor.yml  autogen.sh  configure  configure.ac
.github/workflows/: Linux.yml
R/: rvle.R  rvleClass.R  rvleExp.R
man/: Rvle-class.Rd  conditionMultiSet.Rd  conditionMultiSetBoolean-methods.Rd  conditionMultiSetInteger-methods.Rd  conditionMultiSetReal-methods.Rd  conditionMultiSetString-methods.Rd  conditionMultiSetTuple-methods.Rd  config-methods.Rd  dummy-rvle-class.Rd  getDefault-methods.Rd  handleConfig-methods.Rd  initialize-methods.Rd  isrvle.Rd  restorebackup-methods.Rd  results-methods.Rd  run-methods.Rd  rvle-handle.Rd  rvle-package.Rd  rvle.add_condition.Rd  rvle.add_condition_port.Rd  rvle.add_observable_port.Rd  rvle.add_view.Rd  rvle.attach_condition.Rd  rvle.attach_view.Rd  rvle.available_outputs.Rd  rvle.del_condition.Rd  rvle.del_condition_port.Rd  rvle.del_observable_port.Rd  rvle.del_view.Rd  rvle.detach_condition.Rd  rvle.detach_view.Rd  rvle.experiment_run.Rd  rvle.get_atomic_models.Rd  rvle.get_attached_conditions.Rd  rvle.get_attached_views.Rd  rvle.get_condition_port_value.Rd  rvle.get_condition_ports.Rd  rvle.get_conditions.Rd  rvle.get_log_level.Rd  rvle.get_observable_ports.Rd  (+117 more)
src/: Makevars  Makevars.in  Makevars.win  VleBinding.hpp  config.h  convert.cpp  convert.h  rapi.c  rvle.cpp  rvle.h
tests/: dummy.R  dummy.vpz  petrinet-meteo.R  petrinet-meteo.vpz  rvle_test.R  sir.R  sir.vpz  sirO.R
tests/test_port/: CMakeLists.txt  Readme.txt
tests/test_port/exp/: test_conditions.vpz  test_error.vpz  test_simulation.vpz
tests/test_port/src/: Perturb.cpp  testError.cpp
tests/vle.output/src/vle/oov/: CMakeLists.txt
tests/vlehome/: vle.conf
tests/vlehome/pkgs-1.1/test_port/: CMakeLists.txt
tests/vlehome/pkgs-1.1/test_port/exp/: test_error.vpz
